Muestro conexion con la BD a traves de tabla Clientes. Agrego Acceso al login

--- a/tpc_equipo3a_inmobiliaria/Site.Master
+++ b/tpc_equipo3a_inmobiliaria/Site.Master
@@ -16,8 +16,9 @@
     <webopt:BundleReference runat="server" Path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="~/Css/Master.css">
 </head>
-<body>
+<body class="d-flex flex-column">
     <form runat="server">
         <asp:ScriptManager runat="server">
             <Scripts>
@@ -38,7 +39,7 @@
         </asp:ScriptManager>
 
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
-            <div class="container">
+            <div class="container-fluid">
                 <a class="navbar-brand" runat="server" href="~/">InmobiliariaC#</a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -50,7 +51,20 @@
                         <li class="nav-item"><a class="nav-link" runat="server" href="#">Acerca de</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="#">Contacto</a></li>
                     </ul>
+
+                    <div class="d-flex">
+                        <li class="nav-item">
+                            <a href="/Login" class="navbar-brand" runat="server">
+                                <i class='bi bi-person-circle me-2 fs-5'></i>
+                                <span class="d-none d-sm-inline">Login</span>
+                            </a>
+                        </li>
+                    </div>
+
                 </div>
+
+
+
             </div>
         </nav>
 
@@ -85,15 +99,15 @@
                 <div class="col body-content">
                     <asp:ContentPlaceHolder ID="MainContent" runat="server">
                     </asp:ContentPlaceHolder>
-                    <hr />
-
-                    <%-- Footer --%>
-                    <footer>
-                        Furer low cast
-                    </footer>
                 </div>
+
+                <%-- Footer --%>
+                <footer class="d-flex container-fluid bg-dark text-bg-dark">
+                    Furer low cast &#169
+                </footer>
             </div>
         </div>
+
     </form>
 
     <asp:PlaceHolder runat="server">
